syntax = "proto3";

package cpustats.sys;

option go_package = "github.com/jroosing/cpustats/grpc/v1/sys";

message HardwareInfo {
    Host host = 1;
    Cpu cpu = 2;
}

message Host {
    string host_name = 1;
    string platform = 2;
    string platform_family = 3;
    string platform_version = 4;
    string kernel_version = 5;
    string kernel_architecture = 6;
    string operating_system = 7;
}

message Cpu {
    string model_name = 1;
    int32 physical_cores = 2;
    int32 logical_cores = 3;
    int32 cache_size = 4;
    string architecture = 5;
    double mhz = 6;
}

message HardwareLoad {
    CpuLoad cpu = 1;
    MemoryLoad mem = 2;
    MemoryLoad swap_mem = 3;
    HardwareTemperatures temps = 4;
}

message CpuLoad {
    int32 used_percent = 1;
    repeated int32 used_per_logical_core_percent = 2;
}

message MemoryLoad {
    uint64 total = 1;
    uint64 used = 2;
    int32 used_percent = 3;
}

message TempStats {
    int32 temperature = 1;
    int32 high = 2;
    int32 critical = 3;
}

message HardwareTemperatures {
    TempStats cpu = 1;
    TempStats gpu = 2;
    TempStats memory = 3;
    TempStats disk = 4;
}
